--- a/backend/HRAssistant/HRAssistant.csproj
+++ b/backend/HRAssistant/HRAssistant.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
-    <PackageReference Include="RavenDB.Client" Version="7.1.2-rc-71008" />
+    <PackageReference Include="RavenDB.Client" Version="7.1.3-custom-71" />
   </ItemGroup>
 
 </Project>
