--- a/backend/HRAssistant/HRAssistant.csproj
+++ b/backend/HRAssistant/HRAssistant.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
-    <PackageReference Include="RavenDB.Client" Version="7.1.3-custom-71" />
+    <!-- <PackageReference Include="RavenDB.Client" Version="7.1.3-custom-71" /> -->
+    <ProjectReference Include="F:\ravendb-7.0\src\Raven.Client\Raven.Client.csproj" />
+
   </ItemGroup>
 
 </Project>
